2017-08-24  Bruno Haible  <bruno@clisp.org>

	Support for Linux/s390x.
	* lispbibl.d: On Linux/s390x, default the memory model to
	GENERIC64_HEAPCODES and avoid SINGLEMAP_MEMORY.
	(oint_type_*, oint_addr_*, oint_data_*) [UNIX_LINUX && S390_64]: Define
	a parameterization of TYPECODES configuration.
	* spvw.d (init_memory): Hardcode some good heap limits for the
	TRIVIALMAP_MEMORY model on Linux/s390x.

2017-08-24  Bruno Haible  <bruno@clisp.org>

	Support for Linux/powerpc64.
	* lispbibl.d (oint_type_*, oint_addr_*, oint_data_*)
	[UNIX_LINUX && POWERPC64]: Define parameterization of TYPECODES
	configuration.
	(mtypecode): Define also for oint_type_len==8 on 64-bit machines.
	* spvw.d (init_memory): Hardcode some good heap limits for the
	TRIVIALMAP_MEMORY model on Linux/powerpc64.

2017-08-24  Bruno Haible  <bruno@clisp.org>

	Support for Linux/arm64.
	* makemake.in (XCFLAGS): Add '-fPIC' on ARM64.
	* lispbibl.d (MALLOC_ADDRESS_RANGE) [UNIX_LINUX && ARM64]: Redefine,
	to work around deficiency of the configure test.
	(oint_type_*, oint_addr_*, oint_data_*) [UNIX_LINUX && ARM64]: Define
	parameterization of TYPECODES configuration.
	(varobject_alignment): Define to 8 on ARM64.
	* spvw.d (init_memory): Hardcode some good heap limits for the
	TRIVIALMAP_MEMORY model on Linux/arm64.

2017-08-24  Bruno Haible  <bruno@clisp.org>

	Support 64-bit platforms with MMAP_FIXED_ADDRESS_HIGHEST_BIT <= 38.
	On 64-bit platforms with an mmapable address range of at most 39 bits,
	aint and saint were defined to 32-bit integer types, which is
	catastrophic for SINGLEMAP_MEMORY support.
	* lispbibl.d (aint, saint): Define to 64-bit integer types in this case.

2017-08-24  Bruno Haible  <bruno@clisp.org>

	Avoid unwarranted warnings from gcc's -Wformat-security.
	Reported by Jerry James in
	<https://sourceforge.net/p/clisp/mailman/message/36008037/>.
	* lispbibl.d (gettext, clgettext, clgettextl): Declare with GCC
	attribute format_arg.

2017-08-24  Bruno Haible  <bruno@clisp.org>
